# nets

./: .gitignore  CMakeLists.txt
calculator/: CMakeLists.txt
calculator/client/: CMakeLists.txt
calculator/client/tcp/: CMakeLists.txt  TCPClient.cpp
calculator/client/udp/: CMakeLists.txt  UDPClient.cpp  UDPClient.h
calculator/protocol/: BitsUtils.h  CMakeLists.txt  MathResponse.cpp  MathResponse.h  Message.cpp  Message.h  NumberedMessage.cpp  NumberedMessage.h  Operation.cpp  Operation.h
calculator/protocol_test/: CMakeLists.txt
calculator/server/: CMakeLists.txt
calculator/server/commons/: CMakeLists.txt  Client.h  ServerIO.cpp  ServerIO.h  ServerIODelegate.h  ServerNet.h  ServerNetDelegate.h  ServerNetError.h  ServerUtils.cpp  ServerUtils.h
calculator/server/tcp/: CMakeLists.txt  ClientSession.h  TCPServer.cpp  TCPServer.h  TCPServerLauncher.cpp  TCPServerNet.cpp  TCPServerNet.h
calculator/server/udp/: CMakeLists.txt  ClientHandler.cpp  ClientHandler.h  UDPServer.cpp  UDPServer.h  UDPServerNet.cpp  UDPServerNet.h  main.cpp
calculator/tcp/: CMakeLists.txt
calculator/tcp/client/: CMakeLists.txt  main.cpp
calculator/tcp/server/: CMakeLists.txt  MathUtils.h  ServerNet.cpp
calculator/udp/: CMakeLists.txt
calculator/udp/client/: CMakeLists.txt  UDPClient.cpp  UDPClient.h
calculator/udp/server/: Balancer.cpp  Balancer.h  CMakeLists.txt  ClientHandler.cpp  ClientHandler.h  main.cpp
calculator/uml/: Classes.puml  TCPClasses.puml  TCPComponents.puml  UDPClasses.puml  UDPComponents.puml
nets_lib/: CMakeLists.txt  SockAddr.cpp  SockAddr.h  receivenbytes.c  receivenbytes.h  receiveuptodelimiter.c  receiveuptodelimiter.h  send.cpp  send.h
report/: report.tex  settings.tex  titlepage.tex
tcp/client/: CMakeLists.txt  main.c
tcp/n_clients_n_threads_server/: CMakeLists.txt  main.cpp  main.h
tcp/server/: CMakeLists.txt  main.c
tcp_calculator/: CMakeLists.txt
tcp_calculator/client/: CMakeLists.txt  main.cpp  main.h
tcp_calculator/protocol/: BitsUtils.h  CMakeLists.txt  CalculatorProtocol.cpp  CalculatorProtocol.h  Message.cpp  Message.h  Operation.cpp  Operation.h
tcp_calculator/protocol_test/: CMakeLists.txt  main.cpp
tcp_calculator/server/: CMakeLists.txt  ClientSession.h  Server.cpp  Server.h  ServerIO.cpp  ServerIO.h  ServerIODelegate.h  ServerNet.cpp  ServerNet.h  ServerNetDelegate.h  ServerNetError.h  main.cpp
